--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,5 @@
-PaperclipPolymorph
-==========================
+h1. PaperclipPolymorph
+
 
 This plugin allows users of the Paperclip plugin to easily share attached files between 
 multiple models. Essentially, polymorphic paperclip transparently saves the attached files
@@ -10,10 +10,22 @@ The Paperclip Plugin must also be installed for PolyMorphicPaperclip to work.
 Get paperclip here:
 http://thoughtbot.com/projects/paperclip
 
-Example
-=======
-class Essay < ActiveRecord::Base
+h3. Example
+
+class PhotoEssay < ActiveRecord::Base
   acts_as_polymorphic_paperclip
 end
+
+You can also add a counter_cache to your model if you wish.
+class Essay < ActiveRecord::Base
+  acts_as_polymorphic_paperclip :counter_cache => true
+end
+
+@essay.assets.attach(@asset)
+@essay.assets.detach -or- @essay.assets.detach(@asset)
+
+h4. Helper methods
+There is one helper method so far used to determine if the asset can be displayed in a browser
+@essay.assets.first.browser_safe? # => returns true or false
 
 Copyright (c) 2008 PolymorphicPaperclip Mark Daggett, released under the MIT license
